--- a/style.css
+++ b/style.css
@@ -165,17 +165,17 @@ img{
   display: flex;
   flex-direction: column;
   margin-left: 3%;
-  margin-top: 5%;
-  width: 20vw;
-  height: 30vh;
+  margin-top: 2%;
+  width: 15vw;
+  height: 37vh;
   align-items: center;
 }
 
-.info-perso .notfile{
+.notfile{
   margin-bottom: 2%;
   border: solid 0.2px;
   border-radius: 5px;
-  height: 10%;
+  height: 8%;
 }
 
 .template{
@@ -224,8 +224,8 @@ img{
   display: flex;
   flex-direction: column;
   margin-left: 3%;
-  margin-top: 5%;
-  width: 20vw;
+  margin-top: 2%;
+  width: 19vw;
   height: 40vh;
   align-items: center;
 }
